<resources>
    <string name="app_name">Memimg</string>
    <string name="welcome_title">POZNÁVAČKA</string>
    <string name="all_learnt_message_0">\nMožná už to umíš!</string>
    <string name="all_learnt_message_1">\nAle spíš ne…</string>
    <string name="todo">TODO</string>
    <string name="switch1">Obojživelníci</string>
    <string name="switch2">Plazi</string>
    <string name="switch3">Ptáci - 1</string>
    <string name="switch4">Ptáci - 2</string>
    <string name="switch5">Ptáci - 3</string>
    <string name="start_main_activity_button">GO</string>
    <string name="new_list">New List</string>
    <string name="my_lists">My Lists</string>
    <string name="add_list">Add List</string>
    <string name="practice_list">Practice</string>
    <string name="share">Share</string>
    <string name="communication">Communication</string>
    <string name="contact_us">Contact us</string>
    <string name="pin">PIN</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_list">Select the list first</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="exam">Exam</string>
    <string name="enter_pin_button">ENTER</string>
    <string name="account">Account</string>
    <string name="create_fragment_text"><u> • Split the representatives using the entered word or character, e.g. \"plus\" -> \"dog plus otter plus ...\" </u>\n • You have the option to speak in the text using the keyboard inbuilt speak-in function</string>
    <string name="create_button">CREATE</string>
    <string name="autoRadDruhSwitch">Generate classification</string>
    <string name="save_button">SAVE</string>
    <string name="wait_text">Please, wait for your teacher to start the exam</string>
    <string name="pop_done">DONE</string>
    <string name="title_activity_pop">Auto-insert</string>
    <string name="language_spinner_prompt">Language</string>
    <string name="image_dialog">Import an image</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- User -->
    <string name="user_not_signed_in">You are not signed in</string>
    <string name="sign_out">Sign out</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="classification"><u><b>Classification</b></u></string>
    <string name="text_wiki_import_description">Check classification to be generated</string>
    <string name="title_input">Title</string>
    <string name="dividing_word_character_input">Dividing sequence</string>
    <string name="the_representatives_input">The representatives</string>
    <string name="search_lists">Search lists online</string>
    <string name="internet_connection_required">Internet connection required</string>
    <string name="give_your_list_a_name">Give your list a name.</string>
    <string name="representatives_text">Now, type the things you want to learn.\nDivide them by a comma ","</string>
    <string name="generate_text_view">Lastly, do you want some additional info about the things you entered?</string>
    <string name="user_select_language">First, select the language for your list.</string>
    <string name="my_exams_title">YOUR EXAMS</string>
    <string name="exams">exams</string>
    <string name="removed_from_database">Removed from database</string>
    <string name="failed_to_remove_from_database">Failed to remove from database</string>
    <string name="generated_fragment_edit_text_view">Now, edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_delete">"Do you want to delete "</string>
    <string name="yes">Yes</string>
    <string name="add_to_exams">Add to exams</string>
    <string name="delete">Delete</string>
    <string name="remove_from_database">Remove from shared database</string>
    <string name="upload_to_database">Upload to shared database</string>
    <string name="change_language">Change language</string>
    <string name="practice_all">Practice all (</string>
    <string name="continue_practice">Continue practice (</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="download">Download</string>
    <string name="create">Create</string>
    <string name="knew_it">Knew it</string>
    <string name="didn_t_know">Didn\'t know</string>
    <string name="cancel_create">CANCEL</string>
    <string name="i_created_list">Image recognition exam</string>
    <string name="app_url_store" translatable="false">https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.adamec.timotej.poznavacka</string>
    <string name="after_search_for">After you download the app, go search for this -></string>
    <string name="oh_its_empty_in_here">Oh, it\'s empty in here</string>
    <string name="click_to_add_new_list">Click to add new list</string>
    <string name="poznavacka">Image recognition -</string>
    <string name="learn_for_exam">Prepare for image recogntion exam with Memimg!</string>
    <string name="wait_save">Do not exit the app now</string>
    <string name="error_try_again">Error, try again</string>
    <string name="corrupted_file_downloading_new">Corrupted file, downloading a new one</string>
    <string name="corrupted_file_please_download_new">Corrupted file, please, download a new one</string>
    <string name="unable_to_download_maybe_list_is_not_available">Unable to download, maybe list is no longer available</string>
</resources>
