<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_set_create_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.lists.createList.SetCreateOptionsFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:paddingBottom="0dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RelativeLayout
                android:id="@+id/layout_with_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/layout_border"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">

            <TextView
                android:id="@+id/options_text_view_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/generate_text_view"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center" />

                <Switch
                    android:id="@+id/generateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_below="@id/options_text_view_hint"
                    android:switchPadding="20dp"
                    android:text="@string/autoRadDruhSwitch"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

            </RelativeLayout>
        </RelativeLayout>


    </ScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_create_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/text_color"
        android:text="@string/create"

        android:theme="@style/AppTheme.ExtendedFloatingActionButton"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cancel_bg"
        android:text="@string/cancel_create"
        android:textColor="@color/colorGrey" />

</RelativeLayout>