<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_set_representatives"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.lists.createList.SetLanguageRepresentativesFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:paddingBottom="100dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <RelativeLayout
                android:id="@+id/layout_with_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/layout_border"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">

                <TextView
                    android:id="@+id/language_text_view_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/user_select_language"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/languageSpinnerNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/language_text_view_hint"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:prompt="@string/language_spinner_prompt"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_with_border1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_with_border"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/layout_border"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">

                <TextView
                    android:id="@+id/title_text_view_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/representatives_text"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:lineSpacingMultiplier="1.2"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/representatives_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_text_view_hint"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:inputType="textMultiLine"
                    android:shadowColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_next_representatives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"

        app:srcCompat="@drawable/ic_arrow_forward_white_50dp" />


</RelativeLayout>